--- a/src/component/AllCards/AllCards.css
+++ b/src/component/AllCards/AllCards.css
@@ -3,3 +3,9 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 35px;
 }
+
+@media only screen and (max-width: 600px) {
+    .main-container {
+        grid-template-columns: 1fr;
+    }
+}
